src/smartbanner.scss
$light-grey: #f3f3f3;
$grey: #767676;
$blue: #1474fc;
$black: #000;

.smartbanner {
  position: absolute;
  top: 0;
  left: 0;

  overflow-x: hidden;

  width: 100%;
  height: 84px;

  background: $light-grey;

  font-family: Helvetica, sans, sans-serif;
  &__exit {

    position: absolute;
    top: calc(50% - 6px);
    left: 9px;

    display: block;
    margin: 0;


    width: 12px;
    height: 12px;

    border: 0;

    text-align: center;
  }

  &__icon {
    position: absolute;

    top: 10px;
    left: 30px;

    width: 64px;
    height: 64px;

    border-radius: 15px;
    background-size: 64px 64px;
  }

  &__info {
    position: absolute;

    top: 10px;
    left: 104px;

    display: flex;
    overflow-y: hidden;
    width: 60%;
    height: 64px;

    align-items: center;

    color: $black;

    &__title {
      font-weight: bold;
      font-size: 14px;
      line-height: 19px;
    }
    &__author {
      font-weight: bold;
      font-size: 12px;
      line-height: 16px;
    }
    &__author,
    &__price {
      font-size: 12px;
    }

  }


  &__button {
    position: absolute;
    top: 32px;
    right: 10px;
    z-index: 1;

    display: flex;
    justify-content: center;
    align-items: center;
    padding: 0 10px;
    min-width: 10%;
    height: 28px;
    background: #308DDF;
    border-radius: 3.75px;

    color: white;
    font-weight: bold;
    font-size: 9.75px;
    text-align: center;
    text-decoration: none;

    &__label {
      text-align: center;
    }
  }

  /** Android styles **/
  &.smartbanner--android {
    background: #3d3d3d;

    .smartbanner__exit {
      left: 6px;

      margin-right: 7px;
      width: 17px;
      height: 17px;

      border-radius: 14px;
      background: #1c1e21;
      box-shadow: 0 1px 2px rgba(0, 0, 0, 0.8) inset, 0 1px 1px rgba(255, 255, 255, 0.3);

      color: #b1b1b3;
      font-family: 'ArialRoundedMTBold', Arial;
      font-size: 20px;
      -webkit-font-smoothing: subpixel-antialiased;
      line-height: 17px;
      text-shadow: 0 1px 1px #000;

      &::before,
      &::after {
        top: 3px;
        left: 8px;

        width: 2px;
        height: 11px;

        background: #b1b1b3;
      }

      &:active,
      &:hover {
        color: #eee;
      }
    }

    .smartbanner__icon {
      background-color: transparent;
      box-shadow: none;
    }

    .smartbanner__info {
      color: #ccc;
      text-shadow: 0 1px 2px #000;

      &__title {
        color: #fff;
        font-weight: bold;
        font-size: 14px;
        line-height: 19px;
      }

      &__author,
      &__price {
        color: #fff;
      }
    }

    .smartbanner__button {
      top: 30px;
      right: 5px;

      padding: 0;
      min-width: 12%;

      border-radius: 0;
      background: none;
      display: flex;
      justify-content: center;
      align-items: center;
      padding: 0 10px;
      min-width: 10%;
      height: 28px;
      background: #308DDF;
      border-radius: 3.75px;
  
      color: white;
      font-weight: bold;
      font-size: 9.75px;
    }
  }

  @media screen and (max-width: 320px) {
    &__icon {
      display: none;
    }
    &__info {
      left: 50px;
    }
    &__button {
      right: 5px;
    }
  }
}

